# pinsource

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  changelog  pyproject.toml
.github/workflows/: apt-repo.yml
.pybuild/cpython3_3.13_pinsource/: pinsource-0.0.4a1-py3-none-any.whl
.pybuild/cpython3_3.13_pinsource/scripts/: pi5test  pinsource
debian/: changelog  control  copyright  debhelper-build-stamp  files  python3-pinsource.postinst.debhelper  python3-pinsource.prerm.debhelper  rules
debian/python3-pinsource/DEBIAN/: control  md5sums  postinst  prerm
docs/: install.md
pinsource/: pi5test.py  pinsource.py  pinsourcelegacy.py  usonic.py  usoniclegacy.py
recipes/: basic_reading.py  cuboid_volume_imperial.py  cuboid_volume_metric.py  cylinder_volume_imperial.py  cylinder_volume_metric.py  cylinder_volume_side_metric.py  ellip_cylinder_volume.py  ellip_side_cylinder_volume.py  imperial_depth.py  imperial_distance.py  metric_depth.py  metric_distance.py  metric_distance_board_pin_values.py  sample_speed.py
tests/: README.md  conftest.py  tests.md  tests_pinsource.py  tests_usonic.py  tests_usoniclegacy.py
